Version 0.2.1
Minor Changes
- Updated description
- Bug fix for when beach house is not placed on sand
- Updated steam workshop pictures